# neuro

./: README.md  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/module/: mod.rs
src-tauri/src/module/binary/: mod.rs
src-tauri/src/module/github_release/: mod.rs
src/features/footer/: BottomIcons.css  BottomIcons.tsx
src/features/list/: InfiniteList.css  InfiniteList.tsx
src/features/search/: SearchInput.css  SearchInput.tsx
