[package]
name = "neuro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neuro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [ "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = { version = "2.3.0" }
tokio = { version = "1.46.1" }
tokio-stream = { version = "0.1.17"}
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
liblzma = { version = "0.4.2" }
zip = { version = "4.3.0" }
tar = { version = "0.4.44" }
flate2 = { version = "1.1.2" }
bzip2 = { version = "0.6.0" }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.1"
objc2 = { version = "0.6.1" }
objc2-app-kit = "0.3.1"
